--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ android {
 
     defaultConfig {
         minSdkVersion 21
+        targetSdkVersion 30
     }
     lintOptions {
         disable 'InvalidPackage'
