--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -41,7 +41,11 @@
 	<string></string>
 	<key>Privacy – Bluetooth Peripheral Usage Description</key>
 	<string></string>
-	
+
+	<key>NSCameraUsageDescription</key>
+	<string>Barkodları taramak için kameranıza erişebilir miyiz?</string>
+	<key>io.flutter.embedded_views_preview</key>
+	<Boolean>YES</string>
 
 </dict>
 </plist>
