--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ble_radar_example
 description: Demonstrates how to use the ble_radar plugin.
-version: 1.1.0
+version: 1.1.0+4
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,6 +27,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   lottie: ^0.7.0+1
+  device_info: ^2.0.3
   scan_preview: ^1.0.0
 
 
