--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -40,6 +40,7 @@ android {
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        archivesBaseName = "BleRadar-version-$versionName"
     }
 
     buildTypes {
